[package]
name = "fat_spider"
version = "0.2.5"
edition = "2018"
authors = ["GEGAKE"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.6",features = ["json"]}
serde = "1.0.130"
tokio = {version = "*", features = ["full"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
regex = "1.5.4"